--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1 align="center">This is Rashmitha</h1>
     <marquee>Welcome to the college</marquee>
-
+    <a href="about.html">About</a>
         
 </body>
 </html>
