--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1 align="center">This is Rashmitha</h1>
+    <h2>This is Nakshathra</h2>
     <marquee>Welcome to the college</marquee>
     <a href="about.html">About</a>
         
